fix collapsed style

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,7 +116,7 @@
     border-width: 3px;
   }
 
-  .outline {
+  .outline-text {
     -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: white;
   }
